--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "tailwindcss": "^3.4.0",
         "vite": "^6.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "@primevue/themes": "^4.2.5",
+        "laravel-precognition-vue-inertia": "^0.5.14",
+        "primevue": "^4.2.5"
     }
 }
